Add CORS configuration